--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 </header>
     <main>
         <section class="Carta">
-        <a href="lacarta.html">La Carta</a>
-        <img src="img/lacarta.png" alt="Café" width="150px" >
+        <a href="lacarta.html">La Carta
+        <img src="img/lacarta.png" alt="Café" width="150px"></a>
         </section>
 
         <section class="coffe">
 
-        <a href="elcafe.html">El café</a>
-        <img src="img/café.png" alt="Café" width="150px">
+        <a href="elcafe.html">El café
+        <img src="img/café.png" alt="Café" width="150px"></a>
 
         </section>
         
         <section class="Contacto">
 
-            <a href="contactos.html">Contacto</a>
-            <img src="img/contacto.png" alt="Contacto" width="150px">
+            <a href="contactos.html">Contacto
+            <img src="img/contacto.png" alt="Contacto" width="150px"></a>
             <br>
             <br>
             <br>
