--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <a href="lacarta.html">La Carta
         <img src="img/lacarta.png" alt="Café" width="150px"></a>
         </section>
+        <section>
+            <a href="menudiario.html">Menu diario</a>
+        </section>
 
         <section class="coffe">
 
